--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,15 @@
 .App {
+  margin: 80px auto;
+  width: 80%;
+  height: 80vh;
+  border: 1px dashed gainsboro;
+}
+
+h3:hover{
+  color: #0E0F19;
+}
+h3{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  cursor: pointer;
+  color: #6E7E85;
 }
